
- Issue #2790: sys.flags was not properly exposing its bytes_warning attribute.

- Issue #2196: hasattr now lets exceptions which do not inherit Exception
  (KeyboardInterrupt, and SystemExit) propagate instead of ignoring them

Extension Modules
-----------------

- Support for Windows9x has been removed from the winsound module.

- bsddb module updated to version 4.6.4.

Library
-------

- The CL, CL_old, and cl modules for IRIX have been deprecated for removal in
  Python 3.0.

- The cdplayer module for IRIX has been deprecated for removal in Python 3.0.

- The cddb module for IRIX has been deprecated for removal in Python 3.0.

- The cd and CD modules for IRIX have been deprecated for removal in
  Python 3.0.

- The al and AL modules for IRIX have been deprecated for removal in
  Python 3.0.

- #1713041: fix pprint's handling of maximum depth.

- The timing module has been deprecated for removal in Python 3.0.

- The sv module has been deprecated for removal in Python 3.0.

- The multifile module has been deprecated as per PEP 4.

- The SocketServer module has been renamed 'socketserver'.  The old
  name is now deprecated.

- The imageop module has been deprecated for removal in Python 3.0.

- #2250: Exceptions raised during evaluation of names in rlcompleter's
  ``Completer.complete()`` method are now caught and ignored.

- #2659: Added ``break_on_hyphens`` option to textwrap TextWrapper class.

- The mhlib module has been deprecated for removal in Python 3.0.

- The linuxaudiodev module has been deprecated for removal in Python 3.0.

- The ihooks module has been deprecated for removal in Python 3.0.

- The fpformat module has been deprecated for removal in Python 3.0.

- The dl module has been deprecated for removal in Python 3.0.

- The Canvas module has been deprecated for removal in Python 3.0.

- The compiler package has been deprecated for removal in Python 3.0.

- The Bastion and rexec modules have been deprecated for removal in Python 3.0.
