@@ -203,7 +203,8 @@ class TestStdlibRemovals(unittest.TestCase):
 class TestStdlibRenames(unittest.TestCase):
 
     renames = {'copy_reg': 'copyreg', 'Queue': 'queue',
-               'SocketServer': 'socketserver'}
+               'SocketServer': 'socketserver',
+               'ConfigParser': 'configparser'}
 
     def check_rename(self, module_name, new_module_name):
         """Make sure that:
